--- a/pre.html
+++ b/pre.html
@@ -71,11 +71,11 @@
 <script>
     var pageAttrs = {
         tituloPagina: "Foi revelado",
-        primeiroTexto: "TUDO CERTO!",
-        segundoTexto: "APERTE NO BOTÃO ABAIXO PARA ASSISTIR O VÍDEO!",
-        textoBotao: "Aperte aqui",
+        primeiroTexto: "TUDO CERTO, VAGA RESERVADA!",
+        segundoTexto: "APERTE NO BOTÃO, ME CHAME E ACESSE O ROBÔ!",
+        textoBotao: "APERTE AQUI",
         corBotao: "#ffa400",
-        linkBotao: "https://youtube.com"
+        linkBotao: "https://api.whatsapp.com/send?phone=5511962624066&text=Oi%2C%20quero%20saber%20mais%20sobre%20o%20bot%20%F0%9F%91%80"
     };
     window.onload = function () {
         document.title = pageAttrs.tituloPagina;
