--- a/pre.html
+++ b/pre.html
@@ -95,7 +95,7 @@ src="https://www.facebook.com/tr?id=1668651690200825&ev=PageView&noscript=1"
     var pageAttrs = {
         tituloPagina: "Foi revelado",
         primeiroTexto: "TUDO CERTO, VAGA RESERVADA!",
-        segundoTexto: "APERTE NO BOTÃO, ME CHAME E ACESSE O ROBÔ!",
+        segundoTexto: "APERTE NO BOTÃO E ACESSE O ROBÔ!",
         textoBotao: "APERTE AQUI",
         corBotao: "#ffa400",
         linkBotao: "https://api.whatsapp.com/send?phone=5511962624066&text=Oi%2C%20quero%20saber%20mais%20sobre%20o%20bot%20%F0%9F%91%80"
