--- a/index.html
+++ b/index.html
@@ -140,14 +140,11 @@
     
     
 	
-	
-	<div id="vid_62eed544bbde30000d167954" style="position:relative;width:100%;padding: 56.25% 0 0;"><img
-	    id="thumb_62eed544bbde30000d167954" 
-	    src="https://images.converteai.net/66368df5-9760-4eb1-ad09-05fc97e9d819/players/62eed544bbde30000d167954/thumbnail.jpg" 
-	    style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div 
-	    id="backdrop_62eed544bbde30000d167954" 
-	    style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script 
-	    type="text/javascript" id="scr_62eed544bbde30000d167954">var s=document.createElement("script");s.src="https://scripts.converteai.net/66368df5-9760-4eb1-ad09-05fc97e9d819/players/62eed544bbde30000d167954/player.js",s.async=!0,document.head.appendChild(s);</script>
+	<div id="vid_62eed544bbde30000d167954" style="position:relative;width:100%;padding: 56.25% 0 0;"><img 
+	id="thumb_62eed544bbde30000d167954" 
+	src="https://images.converteai.net/66368df5-9760-4eb1-ad09-05fc97e9d819/players/62eed544bbde30000d167954/thumbnail.jpg" 
+	style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div 
+	id="backdrop_62eed544bbde30000d167954" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62eed544bbde30000d167954">var s=document.createElement("script");s.src="https://scripts.converteai.net/66368df5-9760-4eb1-ad09-05fc97e9d819/players/62eed544bbde30000d167954/player.js",s.async=!0,document.head.appendChild(s);</script>
 	
 
 
