--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             linkTermosDeUso: "https://www.lucrandotanto.site/termos-uso-bjm",
             linkPoliticaDePrivacidade: "https://www.lucrandotanto.site/politicas-privacidade-bjm",
             linkBotao: "https://pay.kiwify.com.br/lv5FcER?afid=GPjWCYUD",
-            delayBotao: 1020
+            delayBotao: 500000000
         };
 
 
