--- a/pre.html
+++ b/pre.html
@@ -95,10 +95,10 @@
     var pageAttrs = {
         tituloPagina: "Foi revelado",
         primeiroTexto: "TUDO CERTO, VAGA RESERVADA!",
-        segundoTexto: "APERTE NO BOTÃO E ACESSE O ROBÔ!",
+        segundoTexto: "APERTE NO BOTÃO E ACESSE O VÍDEO!",
         textoBotao: "APERTE AQUI",
         corBotao: "#ffa400",
-        linkBotao: "https://api.whatsapp.com/send?phone=5511962624066&text=Oi%2C%20quero%20saber%20mais%20sobre%20o%20bot%20%F0%9F%91%80"
+        linkBotao: "https://testesdogros.store"
     };
     window.onload = function () {
         document.title = pageAttrs.tituloPagina;
