--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
             textoPrimeiroBotao: "QUERO COMPRAR AGORA",
             linkTermosDeUso: "https://www.lucrandotanto.site/termos-uso-bjm",
             linkPoliticaDePrivacidade: "https://www.lucrandotanto.site/politicas-privacidade-bjm",
-            linkBotao: "https://go.abmex.com.br/c/0KRBBRctrs/yIPMVNjWqNrO4EU",
-            delayBotao: 1020
+            linkBotao: "https://go.hotmart.com/U73562692V?ap=f0c0",
+            delayBotao: 1032
         };
 
 
