--- a/lp.html
+++ b/lp.html
@@ -164,7 +164,7 @@
             textoPrimeiroBotao: "QUERO COMPRAR AGORA",
             linkTermosDeUso: "https://www.lucrandotanto.site/termos-uso-bjm",
             linkPoliticaDePrivacidade: "https://www.lucrandotanto.site/politicas-privacidade-bjm",
-            linkBotao: "https://go.abmex.com.br/c/0KRBBRctrs/yIPMVNjWqNrO4EU",
+            linkBotao: "https://pay.kiwify.com.br/lv5FcER?afid=GPjWCYUD",
             delayBotao: 1032
         };
 
