--- a/lp.html
+++ b/lp.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+
+</br>
+    </br>
+    <h1> <center> <font color="white"> SEGREDO REVELADO! </font> </center></h1>
+    <h5> <center> <font color="white"> <u><i>VERIFIQUE SE SEU SOM ESTÁ LIGADO </u></i>  </font> </center></h5>
+	
+	
 	
 	
 	<!-- Google tag (gtag.js) -->
