--- a/lp.html
+++ b/lp.html
@@ -191,7 +191,7 @@
             textoPrimeiroBotao: "QUERO COMPRAR AGORA",
             linkTermosDeUso: "https://www.lucrandotanto.site/termos-uso-bjm",
             linkPoliticaDePrivacidade: "https://www.lucrandotanto.site/politicas-privacidade-bjm",
-            linkBotao: "https://go.hotmart.com/A73755843J?ap=0118",
+            linkBotao: "https://go.abmex.com.br/c/0KRBBRctrs/yIPMVNjWqNrO4EU",
             delayBotao: 1032
         };
 
